--- a/app/components/publications/publication-status-modal.hbs
+++ b/app/components/publications/publication-status-modal.hbs
@@ -43,7 +43,10 @@
       </AuFormRow>
     </div>
   </Auk::Modal::Body>
-  <Auk::Modal::Footer @onCancel={{@onCancel}} @cancelDisabled={{this.savePublicationStatus.isRunning}}>
+  <Auk::Modal::Footer
+    @onCancel={{@onCancel}}
+    @cancelDisabled={{this.savePublicationStatus.isRunning}}
+  >
     <AuButton
       data-test-publication-status-save
       @skin="primary"
