--- a/app/components/themis-publications/unpublish-confirmation-modal.hbs
+++ b/app/components/themis-publications/unpublish-confirmation-modal.hbs
@@ -6,7 +6,9 @@
   />
   <Auk::Modal::Body>
     <AuFieldset as |Fieldset|>
-      <Fieldset.legend>{{t "unpublish-publication-scope-selection"}}</Fieldset.legend>
+      <Fieldset.legend>{{t
+          "unpublish-publication-scope-selection"
+        }}</Fieldset.legend>
       <Fieldset.content>
         <AuRadioGroup
           @selected={{this.selectedOption}}
@@ -14,9 +16,7 @@
           as |Group|
         >
           {{#each this.options as |option|}}
-            <Group.Radio
-              @value={{option}}
-            >
+            <Group.Radio @value={{option}}>
               {{option.label}}
             </Group.Radio>
           {{/each}}
@@ -24,7 +24,10 @@
       </Fieldset.content>
     </AuFieldset>
   </Auk::Modal::Body>
-  <Auk::Modal::Footer @onCancel={{@onCancel}} @cancelDisabled={{this.confirmUnpublish.isRunning}}>
+  <Auk::Modal::Footer
+    @onCancel={{@onCancel}}
+    @cancelDisabled={{this.confirmUnpublish.isRunning}}
+  >
     <AuButton
       @skin="primary"
       @loading={{this.confirmUnpublish.isRunning}}
