--- a/app/components/documents/batch-details/batch-editing-row.hbs
+++ b/app/components/documents/batch-details/batch-editing-row.hbs
@@ -30,7 +30,7 @@
         @skin="primary"
         @label={{t "present-for-signing"}}
         @onChange={{fn this.setMarkedForSignature}}
-        @disabled={{or this.isDisabled this.isSignMarkingDisabled}}
+        @disabled={{or this.isDisabled this.isSignMarkingDisabled @agendaitemIsRetracted}}
       />
     </td>
   {{/if}}
