--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -57,6 +57,7 @@
             @label={{t "present-for-signing"}}
             @checked={{@row.markedForSignature}}
             @onChange={{fn @row.setMarkedForSignature}}
+            @disabled={{@agendaitemIsRetracted}}
           />
       {{/if}}
     </td>
