--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -217,6 +217,7 @@
                   <AuButton
                     data-test-document-card-sign-marking
                     @skin="link"
+                    @disabled={{this.agendaitemIsRetracted}}
                     {{on "click" this.markDocumentForSigning.perform}}
                     role="menuitem"
                   >
