--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -26,13 +26,19 @@
       <Auk::Loader />
     {{else if this.canManageSignFlow}}
       {{#if this.decisionActivity}}
-        <AuToggleSwitch
-          @skin="primary"
-          @label={{t "present-for-signing"}}
-          @checked={{this.hasMarkedSignFlow}}
-          @onChange={{fn this.markForSignFlow.perform}}
-          @disabled={{this.markForSignFlow.isRunning}}
-        />
+        {{#if (not this.agendaitemIsRetracted)}}
+          <AuToggleSwitch
+            @skin="primary"
+            @label={{t "present-for-signing"}}
+            @checked={{this.hasMarkedSignFlow}}
+            @onChange={{fn this.markForSignFlow.perform}}
+            @disabled={{this.markForSignFlow.isRunning}}
+          />
+        {{else}}
+          <AuAlert @skin="warning" @icon="alert-triangle" @title={{t "cannot-sign"}}>
+          <p>{{t "cannot-sign-because-agendaitem-retracted"}}</p>
+        </AuAlert>
+        {{/if}}
       {{else}}
         <AuAlert @skin="warning" @icon="alert-triangle" @title={{t "cannot-sign"}}>
           <p>{{t "cannot-sign-because-no-decision-activity"}}</p>
