add publications tab in search

--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -33,5 +33,10 @@
         {{t "newsletter"}}
       </AuNavigationLink>
     </li>
+    <li class="au-c-list-navigation__item">
+      <AuNavigationLink @route="search.publications">
+        Publicaties
+      </AuNavigationLink>
+    </li>
   </ul>
 </nav>
