--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -107,6 +107,7 @@
               @skin="link"
               @icon="renew"
               class="au-u-padding-left-none"
+              @loading={{this.loadDocuments.isRunning}}
               {{on "click" this.updateBetreftContent}}
             >{{t "update-thing" thing=(t "content")}}</AuButton>
             <VersionsDropdown
@@ -219,6 +220,7 @@
               @skin="link"
               @icon="renew"
               class="au-u-padding-left-none"
+              @loading={{this.loadDocuments.isRunning}}
               {{on "click" this.updateBetreftContent}}
             >{{t "update-thing" thing=(t "content")}}</AuButton>
             <VersionsDropdown
