KAS-4300 Adjust positioning type of flatpickr dropdown

--- a/app/styles/addon-overrides/_ember-flatpickr.scss
+++ b/app/styles/addon-overrides/_ember-flatpickr.scss
@@ -9,6 +9,7 @@ $daysWidth: ($daySize * 7) + ($dayMargin * 14) + ($padding * 2) + 2;
 $calendarWidth: $daysWidth;
 
 .flatpickr-calendar {
+  position: fixed;
   width: $calendarWidth;
 
   box-shadow: $auk-shadow-small;
