chore: hide secretary stuff behind digital_agenda flag

--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -70,9 +70,11 @@
     @onSave={{this.saveGovernmentAreas}}
   />
 {{/if}}
+{{#if this.enableDigitalAgenda}}
 <Mandatees::SecretaryPanel
   @referenceDate={{this.meeting.plannedStart}}
   @allowEditing={{user-may "manage-agendaitems"}}
   @onSave={{this.saveSecretary}}
   @secretary={{this.decisionActivity.secretary}}
 />
+{{/if}}
