--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -115,16 +115,18 @@
           </div>
         </AuFormRow>
       {{/if}}
-      <AuFormRow>
-        <Auk::Label>
-          {{t "secretary-for-meeting"}}
-        </Auk::Label>
-        <Mandatees::MandateeSelector
-          @onSelectMandatee={{fn (mut this.secretary)}}
-          @selectedMandatees={{this.secretary}}
-          @visibleRoles={{this.visibleRoles}}
-        />
-      </AuFormRow>
+      {{#if this.enableDigitalAgenda}}
+        <AuFormRow>
+          <Auk::Label>
+            {{t "secretary-for-meeting"}}
+          </Auk::Label>
+          <Mandatees::MandateeSelector
+            @onSelectMandatee={{fn (mut this.secretary)}}
+            @selectedMandatees={{this.secretary}}
+            @visibleRoles={{this.visibleRoles}}
+          />
+        </AuFormRow>
+      {{/if}}
       {{#unless this.isAnnexMeeting}}
         <AuFormRow>
           <Auk::Label>
