--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -8,6 +8,14 @@
           id="search-subroute-filters-area"
           class="au-o-box au-o-box--small au-o-flow au-o-flow--tiny"
         >
+          <Search::DateRangeFilter
+            @dateFrom={{this.dateFrom}}
+            @dateTo={{this.dateTo}}
+            @onDateFromChange={{this.setDateFrom}}
+            @onDateToChange={{this.setDateTo}}
+            @onDateFromClear={{set this "dateFrom" undefined}}
+            @onDateToClear={{set this "dateTo" undefined}}
+          />
           <div class="au-c-card au-o-box au-o-box--small">
             <Auk::Label>{{t "status"}}</Auk::Label>
             <Signatures::StatusFilter
