--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -36,9 +36,104 @@
           />
         {{/unless}}
       {{/if}}
+      {{#if (eq this.agenda.status.isDesignAgenda false)}}
+        <AuDropdown
+          @skin="secondary"
+          @title={{t "actions"}}
+          @alignment="right"
+          class="auk-u-hidden@print"
+        >
+          <AuButton
+            @skin="link"
+            role="menuitem"
+            {{on "click" this.showVpModal}}
+          >
+            Indienen bij Vlaams Parlement
+          </AuButton>
+          {{!-- {{#if (or this.currentSession.isAdmin (await this.isDeletable))}}
+            <AuButton
+              data-test-agendaitem-controls-action-delete
+              @skin="link"
+              @alert={{true}}
+              role="menuitem"
+              {{on "click" this.toggleIsVerifying}}
+            >
+              {{t "delete"}}
+            </AuButton>
+          {{/if}} --}}
+        </AuDropdown>
+        {{#if this.vpModal}}
+          <Auk::Modal @size="medium">
+            <Auk::Modal::Header 
+              @title="Dossier controleren"
+              @onClose={{this.showVpModal}}
+            />
+            <Auk::Modal::Body>
+              <AuContent>
+                <p>De volgende zaken worden doorgestuurd:</p>
+                <ul class="au-u-margin-top">
+                  <li>
+                    Eerste principiële goedkeuring:
+                    <ul>
+                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
+                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
+                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -ontwerpdecreet.pdf</a></li>
+                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -nota.pdf</a></li>
+                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -adviesnota.pdf</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    Definitieve goedkeuring:
+                    <ul>
+                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
+                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
+                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -ontwerpdecreet.pdf (getekend)</a></li>
+                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -nota.pdf</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </AuContent>
+              <AuAlert
+                @title="Dit dossier mist nog:"
+                @skin="warning"
+                @icon="alert-triangle"
+                @size="small"
+                class="au-u-margin-bottom-none au-u-margin-top"
+              >
+                <AuContent>
+                  <ul>
+                    <li>Memorie van definitieve goedkeuring (in Word)</li>
+                    <li>Ontwerpdecreet definitieve goedkeuring (ondertekend)</li>
+                  </ul>
+                </AuContent>
+              </AuAlert>
+            </Auk::Modal::Body>
+            <Auk::Modal::Footer @onCancel={{this.showVpModal}}>
+              <AuButton
+                @skin="primary"
+                {{on "click" this.submitToVp}}
+              >
+                Indienen bij het Vlaams Parlement
+              </AuButton>
+            </Auk::Modal::Footer>
+          </Auk::Modal>
+        {{/if}}
+      {{/if}}
     </Group.Item>
   </Toolbar.Group>
 </Auk::Toolbar>
+
+{{#if (eq this.agenda.status.isDesignAgenda false)}}
+{{#if this.vpSent}} 
+  <AuAlert
+    @title="Dit dossier is ingediend bij het Vlaams Parlement op 29/09/2023"
+    @skin="success"
+    @icon="mail"
+    @size="small"
+  >
+  </AuAlert>
+{{/if}}
+{{/if}}
 
 <Agenda::Agendaitem::AgendaitemCasePanel
   @agendaitem={{this.model}}
