--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -125,5 +125,84 @@
         </c.content>
       </AuCard>
     {{/if}}
+    <AuCard @size="small" class="au-u-margin-top-small" as |c|>
+      <c.content>
+        <div class="auk-form-group">
+          <AuLabel for="type">{{t "document-type"}}</AuLabel>
+          <Utils::RadioDropdownComboSelect
+            @options={{this.sortedDocumentTypes}}
+            @onSelect={{this.selectDocumentType}}
+            @selected="Nota"
+          />
+        </div>
+      </c.content>
+    </AuCard>
+    <AuCard @size="small" class="au-u-margin-top-small" as |c|>
+      <c.content>
+        <div class="auk-form-group">
+          <AuLabel for="version">Versie</AuLabel>
+          <div class="auk-radio-list auk-radio-list--inline">
+            <label class="auk-radio" data-children-count="1" for="geen">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="geen"
+                name="type"
+                checked={{true}}
+                value="geen"
+              />
+              Eerste
+              <span class="auk-radio__box"></span>
+            </label>
+            <label class="auk-radio" data-children-count="1" for="BIS">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="BIS"
+                name="type"
+                value="BIS"
+              />
+              BIS
+              <span class="auk-radio__box"></span>
+            </label>
+            <label class="auk-radio" data-children-count="1" for="TER">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="TER"
+                name="type"
+                value="TER"
+              />
+              TER
+              <span class="auk-radio__box"></span>
+            </label>
+            <label class="auk-radio" data-children-count="1" for="QUATER">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="QUATER"
+                name="type"
+                value="QUATER"
+              />
+              QUATER
+              <span class="auk-radio__box"></span>
+            </label>
+          </div>
+        </div>
+      </c.content>
+    </AuCard>
+    <AuCard @size="small" class="au-u-margin-top-small" as |c|>
+      <c.content>
+        <div class="auk-form-group">
+          <AuLabel for="date">Datum</AuLabel>
+          <Auk::Datepicker
+            @date={{date-phrase @piece.created}}
+            @onChange={{set this "dateFromBuffer"}}
+            @enableClear={{this.dateFromBuffer}}
+            @onClear={{set this "dateFromBuffer" undefined}}
+          />
+        </div>
+      </c.content>
+    </AuCard>
   </:body>
 </ConfirmationModal>
