--- a/app/components/documents/uploaded-document.hbs
+++ b/app/components/documents/uploaded-document.hbs
@@ -26,6 +26,56 @@
             @selected={{this.selectedDocumentType}}
           />
         </div>
+        <div class="auk-form-group" data-test-uploaded-document-types>
+          <Auk::Label>Versie</Auk::Label>
+          <div class="auk-radio-list auk-radio-list--inline">
+            <label class="auk-radio" data-children-count="1" for="geen">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="geen"
+                name="type"
+                checked={{true}}
+                value="geen"
+              />
+              Eerste
+              <span class="auk-radio__box"></span>
+            </label>
+            <label class="auk-radio" data-children-count="1" for="BIS">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="BIS"
+                name="type"
+                value="BIS"
+              />
+              BIS
+              <span class="auk-radio__box"></span>
+            </label>
+            <label class="auk-radio" data-children-count="1" for="TER">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="TER"
+                name="type"
+                value="TER"
+              />
+              TER
+              <span class="auk-radio__box"></span>
+            </label>
+            <label class="auk-radio" data-children-count="1" for="QUATER">
+              <input
+                type="radio"
+                class="auk-radio__toggle"
+                id="QUATER"
+                name="type"
+                value="QUATER"
+              />
+              QUATER
+              <span class="auk-radio__box"></span>
+            </label>
+          </div>
+        </div>
       {{/unless}}
     </div>
   {{/if}}
