--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -196,7 +196,7 @@
         <div class="auk-form-group">
           <AuLabel for="date">Datum</AuLabel>
           <Auk::Datepicker
-            @date={{date-phrase @piece.created}}
+            @date={{date-format @piece.created 'dd-MM-yyyy' }}
             @onChange={{set this "dateFromBuffer"}}
             @enableClear={{this.dateFromBuffer}}
             @onClear={{set this "dateFromBuffer" undefined}}
